--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,6 +14,7 @@
 @import 'components/carousel';
 @import 'components/nav';
 @import 'components/profile';
+@import 'components/main';
 // Pages
 @import 'pages/pages';
 // Themes
